# perfaware

./: CMakeLists.txt  bench.cpp  instructions_per_clock.h  listing_1.cpp  main.cpp  simd.h  waste.h
